[build-system]
# Minimum requirements for the build system to execute.
# See https://github.com/scipy/scipy/pull/12940 for the AIX issue.
requires = [
    "setuptools>=38.6.0",
    "wheel",
    "numpy==1.16.5; python_version=='3.7'",
    "numpy==1.16.5; python_version=='3.7'",
    "numpy==1.17.3; python_version=='3.8'",
    "numpy; python_version>='3.9'",
]
build-backend = "setuptools.build_meta"
