[metadata]
name = probably
description = Probably: Simple Probabilistic Data Structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Parsely/probably
author = Parse.ly
author_email = hello@parsely.com
license = MIT License
license_file = LICENSE
platforms = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Utilities
    Topic :: Database :: Database Engines/Servers
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/Parsely/probably/issues
    Documentation = https://github.com/Parsely/probably
    Source Code = https://github.com/Parsely/probably

[options]
packages = find:
install_requires =
    bitarray
    mmh3>=2.4
    numpy>=1.16.5
    six
python_requires = >=3.6.0
setup_requires= 
    setuptools>=38.6.0
    wheel
    Cython>=0.29.21
    oldest-supported-numpy
zip_safe = False

[options.extras_require]
test =
    pytest>=5.0.1

[build_ext]
inplace = True

[options.packages.find]
include = probably, probably.*
